<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:fillViewport="true">
<RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_reg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/et_reg_cnfrm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_reg_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_cnfrm_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/sp_reg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tv_DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_reg_gender"
        android:layout_alignLeft="@+id/hsv_dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_dob" />

    <HorizontalScrollView
        android:id="@+id/hsv_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_DOB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >
        
	    <DatePicker
	        android:id="@+id/dp_reg_dob"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:calendarViewShown="false" />
          
        </HorizontalScrollView>

    <CheckBox
        android:id="@+id/cb_reg_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hsv_dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reg_aggrement" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_reg_agree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/bt_register" />

</RelativeLayout>
</ScrollView>